tracks restantes: explicar todos los flags/comandos CLI sin explicar (12 tracks, 0/913 temas pendientes)
Cierra el backlog de términos sin explicar (docs/editorial-contract.md punto 5)
en los 12 tracks restantes: foundations, javascript, node, angular, react,
java, spring-boot, kotlin-multiplatform, android, ios, flutter y rutaflow.

- Se agregan explicaciones con la frase de referencia "es la bandera/comando
  que..." para cada flag/comando CLI usado por primera vez en cada track.
- Se corrigen dos falsos positivos sistemáticos del heurístico de auditoría:
  comentarios "# python ..." en bloques bash que el script interpreta como
  invocación del comando (reescritos a "Este script python3 ..."), y
  propiedades Kotlin llamadas igual que herramientas CLI conocidas (ej. `kind`).

python3 scripts/audit_unexplained_terms.py ahora reporta 0/913 temas en las
14 tracks del curso. Validadores y auditores (`validate_pedagogy`,
`validate_curriculum`, `validate_official_sources`,
`validate_official_learning_paths`, `validate_floci_official_curriculum`,
`validate_code_quality`, `validate_rutaflow`,
`validate_requested_master_topics`, `validate_learning_priorities`,
`audit_topic_learning_quality --check`, `audit_seven_step_methodology --check`,
`audit_code_visual_quality --check`, `build_editorial_backlog --check`,
`build_web_topic_index --check`, `build_prerequisite_graph --check`) pasan
limpios. docs/repo-graph.* regenerado.